deploy: 3443a5cc4e802b677ce75a770b8d842273566a6c

--- a/print.html
+++ b/print.html
@@ -152,8 +152,8 @@
                     <main>
                         <h1><a class="header" href="#introduction" id="introduction">Introduction</a></h1>
 <p>Welcome to the SwiftWasm Documentation!</p>
-<p>SwiftWasm is an open source project to support WebAssembly target for Swift.</p>
-<p>The goal of this project is fully support of WebAssembly target for Swift and to be merged into upstream repository https://github.com/apple/swift.</p>
+<p>SwiftWasm is an open source project to support the WebAssembly target for Swift.</p>
+<p>The goal of this project is to fully support the WebAssembly target for Swift and to be merged into upstream repository https://github.com/apple/swift.</p>
 <h2><a class="header" href="#forum-posts" id="forum-posts">Forum posts</a></h2>
 <ul>
 <li><a href="https://forums.swift.org/t/wasm-support/16087/14">Design of this project</a></li>
@@ -166,7 +166,9 @@
 <h4><a class="header" href="#branching-scheme" id="branching-scheme">Branching scheme</a></h4>
 <ul>
 <li><code>swiftwasm</code> is the main develop branch</li>
-<li><code>master</code> is mirror of <code>master</code> branch of <code>apple/master</code>. This branch is necessary to avoid <a href="https://github.com/swiftwasm/swift/pull/36">some issues</a></li>
+<li><code>master</code> is a mirror of the <code>master</code> branch of the upstream <code>apple/master</code> repository. This branch is necessary to avoid <a href="https://github.com/swiftwasm/swift/pull/36">some issues</a></li>
+<li><code>swiftwasm-release/5.3</code> is the branch where 5.3 release of SwiftWasm is prepared.</li>
+<li><code>release/5.3</code> is a mirror of the upstream <code>release/5.3</code> branch.</li>
 </ul>
 <h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasllvm-projecta" id="a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasllvm-projecta"><a href="https://github.com/swiftwasm/llvm-project">swiftwas/llvm-project</a></a></h3>
 <p>Forked from <a href="https://github.com/apple/llvm-project">apple/llvm-project</a>.</p>
