--- a/print.html
+++ b/print.html
@@ -170,7 +170,7 @@
 <li><code>swiftwasm-release/5.3</code> is the branch where 5.3 release of SwiftWasm is prepared.</li>
 <li><code>release/5.3</code> is a mirror of the upstream <code>release/5.3</code> branch.</li>
 </ul>
-<h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasllvm-projecta" id="a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasllvm-projecta"><a href="https://github.com/swiftwasm/llvm-project">swiftwas/llvm-project</a></a></h3>
+<h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasmllvm-projecta" id="a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasmllvm-projecta"><a href="https://github.com/swiftwasm/llvm-project">swiftwasm/llvm-project</a></a></h3>
 <p>Forked from <a href="https://github.com/apple/llvm-project">apple/llvm-project</a>.</p>
 <p><code>swiftwasm</code> branch is based on <code>swift/master</code> branch of <code>apple/llvm-project</code>.</p>
 <p>Please see <a href="https://github.com/apple/llvm-project/blob/apple/master/apple-docs/AppleBranchingScheme.md">AppleBranchingScheme.md</a></p>
