--- a/print.html
+++ b/print.html
@@ -202,8 +202,9 @@ $ swiftc \
     -target wasm32-unknown-wasi \
     -sdk $TOOLCHAIN_PATH/share/wasi-sysroot \
     hello.swift -o hello.wasm
-# Run the produced binary with wasmtime (or other WebAssembly runtime)
-$ wasmtime hello.wasm
+</code></pre>
+<p>You can the run the produced binary with <a href="https://wasmer.io/">wasmer</a> (or other WebAssembly runtime):</p>
+<pre><code class="language-sh">$ wasmer hello.wasm
 </code></pre>
 <p>The produced binary depends on WASI which is an interface of system call for WebAssembly.
 So you need to use WASI supported runtime and when you run the binary on browser, you need WASI polyfill library like <a href="https://github.com/wasmerio/wasmer-js/tree/master/packages/wasi">@wasmer/wasi</a></p>
@@ -212,7 +213,7 @@ So you need to use WASI supported runtime and when you run the binary on browser
 <pre><code class="language-sh">$ swiftenv local wasm-DEVELOPMENT-SNAPSHOT-2020-03-08-a
 $ swift package init --type executable
 $ swift build --triple wasm32-unknown-wasi
-$ wasmtime ./.build/debug/hello-swiftwasm
+$ wasmer ./.build/debug/hello-swiftwasm
 Hello, world!
 </code></pre>
 <h2><a class="header" href="#javascript-binding" id="javascript-binding">JavaScript Binding</a></h2>
