deploy: b001c05e3223e18d38af8246cf4d61ad546a33ad

--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -172,7 +172,7 @@ $ swiftc \
 <pre><code class="language-sh">$ wasmer hello.wasm
 </code></pre>
 <p>The produced binary depends on WASI which is an interface of system call for WebAssembly.
-So you need to use WASI supported runtime and when you run the binary on browser, you need WASI polyfill library like <a href="https://github.com/wasmerio/wasmer-js/tree/master/packages/wasi">@wasmer/wasi</a></p>
+So you need to use WASI supported runtime and when you run the binary on browser, you need WASI polyfill library like <a href="https://github.com/wasmerio/wasmer-js/tree/master/packages/wasi">@wasmer/wasi</a>.</p>
 <h2><a class="header" href="#swift-package-manager" id="swift-package-manager">Swift Package Manager</a></h2>
 <p>You can also use SwiftPM for managing packages in the same way as other platforms.</p>
 <pre><code class="language-sh">$ swiftenv local wasm-DEVELOPMENT-SNAPSHOT-2020-03-08-a
