deploy: 78660ad56f61112f9d3325a5e08361f191d5c7ed

--- a/print.html
+++ b/print.html
@@ -189,9 +189,10 @@
 <p>The toolchains can be installed via <a href="https://github.com/kylef/swiftenv"><code>swiftenv</code></a> like official nightly toolchain.</p>
 <p>e.g.</p>
 <pre><code class="language-sh">
-$ swiftenv install https://github.com/swiftwasm/swift/releases/download/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-03-08-a/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-03-08-a-osx.tar.gz
+$ swiftenv install \
+  https://github.com/swiftwasm/swift/releases/download/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a-osx.tar.gz
 $ swift --version
-Swift version 5.2-dev (LLVM 7fc8796bc1, Swift 5be35e7aee)
+Swift version 5.3-dev (LLVM 7fc8796bc1, Swift 5be35e7aee)
 Target: x86_64-apple-darwin19.3.0
 </code></pre>
 <h2><a class="header" href="#hello-world" id="hello-world">Hello, World!</a></h2>
@@ -210,7 +211,7 @@ $ swiftc \
 So you need to use WASI supported runtime and when you run the binary on browser, you need WASI polyfill library like <a href="https://github.com/wasmerio/wasmer-js/tree/master/packages/wasi">@wasmer/wasi</a>.</p>
 <h2><a class="header" href="#swift-package-manager" id="swift-package-manager">Swift Package Manager</a></h2>
 <p>You can also use SwiftPM for managing packages in the same way as other platforms.</p>
-<pre><code class="language-sh">$ swiftenv local wasm-DEVELOPMENT-SNAPSHOT-2020-03-08-a
+<pre><code class="language-sh">$ swiftenv local wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a
 $ swift package init --type executable
 $ swift build --triple wasm32-unknown-wasi
 $ wasmer ./.build/debug/hello-swiftwasm
