--- a/print.html
+++ b/print.html
@@ -153,36 +153,8 @@
                         <h1><a class="header" href="#introduction" id="introduction">Introduction</a></h1>
 <p>Welcome to the SwiftWasm Documentation!</p>
 <p>SwiftWasm is an open source project to support the WebAssembly target for Swift.</p>
-<p>The goal of this project is to fully support the WebAssembly target for Swift and to be merged into upstream repository https://github.com/apple/swift.</p>
-<h2><a class="header" href="#forum-posts" id="forum-posts">Forum posts</a></h2>
-<ul>
-<li><a href="https://forums.swift.org/t/wasm-support/16087/14">Design of this project</a></li>
-<li><a href="https://forums.swift.org/t/webassembly-swiftpm/34343">Swift Package Manager Support</a></li>
-</ul>
-<h2><a class="header" href="#a-hrefdevelopmentguidehtmlhow-to-developa" id="a-hrefdevelopmentguidehtmlhow-to-developa"><a href="./DevelopmentGuide.html">How to develop</a></a></h2>
-<h2><a class="header" href="#repositories" id="repositories">Repositories</a></h2>
-<h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmswiftswiftwasmswifta" id="a-hrefhttpsgithubcomswiftwasmswiftswiftwasmswifta"><a href="https://github.com/swiftwasm/swift">swiftwasm/swift</a></a></h3>
-<p>The main repository of this project. Forked from <a href="https://github.com/swiftwasm/swift">apple/swift</a>. We are tracking upstream changes using <a href="https://github.com/wei/pull">pull</a></p>
-<h4><a class="header" href="#branching-scheme" id="branching-scheme">Branching scheme</a></h4>
-<ul>
-<li><code>swiftwasm</code> is the main develop branch</li>
-<li><code>master</code> is a mirror of the <code>master</code> branch of the upstream <code>apple/master</code> repository. This branch is necessary to avoid <a href="https://github.com/swiftwasm/swift/pull/36">some issues</a></li>
-<li><code>swiftwasm-release/5.3</code> is the branch where 5.3 release of SwiftWasm is prepared.</li>
-<li><code>release/5.3</code> is a mirror of the upstream <code>release/5.3</code> branch.</li>
-</ul>
-<h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasmllvm-projecta" id="a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasmllvm-projecta"><a href="https://github.com/swiftwasm/llvm-project">swiftwasm/llvm-project</a></a></h3>
-<p>Forked from <a href="https://github.com/apple/llvm-project">apple/llvm-project</a>.</p>
-<p><code>swiftwasm</code> branch is based on <code>swift/master</code> branch of <code>apple/llvm-project</code>.</p>
-<p>Please see <a href="https://github.com/apple/llvm-project/blob/apple/master/apple-docs/AppleBranchingScheme.md">AppleBranchingScheme.md</a></p>
-<h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmicu4c-wasiswiftwasmicu4c-wasia" id="a-hrefhttpsgithubcomswiftwasmicu4c-wasiswiftwasmicu4c-wasia"><a href="https://github.com/swiftwasm/icu4c-wasi">swiftwasm/icu4c-wasi</a></a></h3>
-<p>Build script and patches for building ICU project for WebAssembly</p>
-<p>We are sending patches to upstream repository.</p>
-<ul>
-<li>https://github.com/unicode-org/icu/pull/990</li>
-</ul>
-<h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmwasi-sdkswiftwasmwasi-sdka-and-a-hrefhttpsgithubcomswiftwasmwasi-libcswiftwasmwasi-libca" id="a-hrefhttpsgithubcomswiftwasmwasi-sdkswiftwasmwasi-sdka-and-a-hrefhttpsgithubcomswiftwasmwasi-libcswiftwasmwasi-libca"><a href="https://github.com/swiftwasm/wasi-sdk">swiftwasm/wasi-sdk</a> and <a href="https://github.com/swiftwasm/wasi-libc">swiftwasm/wasi-libc</a></a></h3>
-<p>Forked from <a href="https://github.com/WebAssembly/wasi-sdk">WebAssembly/wasi-sdk</a> and <a href="https://github.com/WebAssembly/wasi-libc">WebAssembly/wasi-libc</a>.</p>
-<p>We fork them to build <code>wasi-sysroot</code> with pthread header. There aren't so many diff from upstream.</p>
+<p>The goal of this project is to fully support the WebAssembly target for Swift and to be merged into 
+<a href="https://github.com/apple/swift">the upstream repository</a>.</p>
 <h1><a class="header" href="#getting-started-with-nightly-toolchain" id="getting-started-with-nightly-toolchain">Getting Started (with Nightly Toolchain)</a></h1>
 <h2><a class="header" href="#installation" id="installation">Installation</a></h2>
 <p>You can install latest toolchain of SwiftWasm from <a href="https://github.com/swiftwasm/swift/releases">Release Page</a></p>
@@ -218,6 +190,43 @@ $ wasmer ./.build/debug/hello-swiftwasm
 Hello, world!
 </code></pre>
 <h2><a class="header" href="#javascript-binding" id="javascript-binding">JavaScript Binding</a></h2>
+<p><a href="https://github.com/kateinoigakukun/JavaScriptKit">JavaScriptKit</a> is Swift framework to interact with JavaScript through WebAssembly.</p>
+<p>You can use any JavaScript API from Swift using this library.</p>
+<h1><a class="header" href="#getting-started-with-nightly-toolchain-1" id="getting-started-with-nightly-toolchain-1">Getting Started (with Nightly Toolchain)</a></h1>
+<h2><a class="header" href="#installation-1" id="installation-1">Installation</a></h2>
+<p>You can install latest toolchain of SwiftWasm from <a href="https://github.com/swiftwasm/swift/releases">Release Page</a></p>
+<p>The toolchains can be installed via <a href="https://github.com/kylef/swiftenv"><code>swiftenv</code></a> like official nightly toolchain.</p>
+<p>e.g.</p>
+<pre><code class="language-sh">
+$ swiftenv install \
+  https://github.com/swiftwasm/swift/releases/download/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a-osx.tar.gz
+$ swift --version
+Swift version 5.3-dev (LLVM 7fc8796bc1, Swift 5be35e7aee)
+Target: x86_64-apple-darwin19.3.0
+</code></pre>
+<h2><a class="header" href="#hello-world-1" id="hello-world-1">Hello, World!</a></h2>
+<pre><code class="language-sh">$ echo 'print(&quot;Hello, world!&quot;)' &gt; hello.swift
+# Compile Swift code into WebAssembly with WASI
+$ TOOLCHAIN_PATH=$(dirname $(swiftenv which swiftc))/../
+$ swiftc \
+    -target wasm32-unknown-wasi \
+    -sdk $TOOLCHAIN_PATH/share/wasi-sysroot \
+    hello.swift -o hello.wasm
+</code></pre>
+<p>You can the run the produced binary with <a href="https://wasmer.io/">wasmer</a> (or other WebAssembly runtime):</p>
+<pre><code class="language-sh">$ wasmer hello.wasm
+</code></pre>
+<p>The produced binary depends on WASI which is an interface of system call for WebAssembly.
+So you need to use WASI supported runtime and when you run the binary on browser, you need WASI polyfill library like <a href="https://github.com/wasmerio/wasmer-js/tree/master/packages/wasi">@wasmer/wasi</a>.</p>
+<h2><a class="header" href="#swift-package-manager-1" id="swift-package-manager-1">Swift Package Manager</a></h2>
+<p>You can also use SwiftPM for managing packages in the same way as other platforms.</p>
+<pre><code class="language-sh">$ swiftenv local wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a
+$ swift package init --type executable
+$ swift build --triple wasm32-unknown-wasi
+$ wasmer ./.build/debug/hello-swiftwasm
+Hello, world!
+</code></pre>
+<h2><a class="header" href="#javascript-binding-1" id="javascript-binding-1">JavaScript Binding</a></h2>
 <p><a href="https://github.com/kateinoigakukun/JavaScriptKit">JavaScriptKit</a> is Swift framework to interact with JavaScript through WebAssembly.</p>
 <p>You can use any JavaScript API from Swift using this library.</p>
 <h1><a class="header" href="#development-guide" id="development-guide">Development Guide</a></h1>
