--- a/print.html
+++ b/print.html
@@ -192,43 +192,7 @@ Hello, world!
 <h3><a class="header" href="#javascript-bindings" id="javascript-bindings">JavaScript Bindings</a></h3>
 <p><a href="https://github.com/kateinoigakukun/JavaScriptKit">JavaScriptKit</a> is Swift framework to interact with JavaScript through WebAssembly.</p>
 <p>You can use any JavaScript API from Swift using this library.</p>
-<h1><a class="header" href="#getting-started-with-nightly-toolchain-1" id="getting-started-with-nightly-toolchain-1">Getting Started (with Nightly Toolchain)</a></h1>
-<h2><a class="header" href="#installation-1" id="installation-1">Installation</a></h2>
-<p>You can install latest toolchain of SwiftWasm from <a href="https://github.com/swiftwasm/swift/releases">Release Page</a></p>
-<p>The toolchains can be installed via <a href="https://github.com/kylef/swiftenv"><code>swiftenv</code></a> like official nightly toolchain.</p>
-<p>e.g.</p>
-<pre><code class="language-sh">
-$ swiftenv install \
-  https://github.com/swiftwasm/swift/releases/download/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a-osx.tar.gz
-$ swift --version
-Swift version 5.3-dev (LLVM 7fc8796bc1, Swift 5be35e7aee)
-Target: x86_64-apple-darwin19.3.0
-</code></pre>
-<h2><a class="header" href="#hello-world-1" id="hello-world-1">Hello, World!</a></h2>
-<pre><code class="language-sh">$ echo 'print(&quot;Hello, world!&quot;)' &gt; hello.swift
-# Compile Swift code into WebAssembly with WASI
-$ TOOLCHAIN_PATH=$(dirname $(swiftenv which swiftc))/../
-$ swiftc \
-    -target wasm32-unknown-wasi \
-    -sdk $TOOLCHAIN_PATH/share/wasi-sysroot \
-    hello.swift -o hello.wasm
-</code></pre>
-<p>You can the run the produced binary with <a href="https://wasmer.io/">wasmer</a> (or other WebAssembly runtime):</p>
-<pre><code class="language-sh">$ wasmer hello.wasm
-</code></pre>
-<p>The produced binary depends on WASI which is an interface of system call for WebAssembly.
-So you need to use WASI supported runtime and when you run the binary on browser, you need WASI polyfill library like <a href="https://github.com/wasmerio/wasmer-js/tree/master/packages/wasi">@wasmer/wasi</a>.</p>
-<h2><a class="header" href="#swift-package-manager-1" id="swift-package-manager-1">Swift Package Manager</a></h2>
-<p>You can also use SwiftPM for managing packages in the same way as other platforms.</p>
-<pre><code class="language-sh">$ swiftenv local wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a
-$ swift package init --type executable
-$ swift build --triple wasm32-unknown-wasi
-$ wasmer ./.build/debug/hello-swiftwasm
-Hello, world!
-</code></pre>
-<h2><a class="header" href="#javascript-binding" id="javascript-binding">JavaScript Binding</a></h2>
-<p><a href="https://github.com/kateinoigakukun/JavaScriptKit">JavaScriptKit</a> is Swift framework to interact with JavaScript through WebAssembly.</p>
-<p>You can use any JavaScript API from Swift using this library.</p>
+<h1><a class="header" href="#getting-started" id="getting-started">Getting Started</a></h1>
 <h1><a class="header" href="#development-guide" id="development-guide">Development Guide</a></h1>
 <h2><a class="header" href="#how-to-build" id="how-to-build">How to build</a></h2>
 <p>First, checkout the project source code.</p>
