deploy: 543e4df98f3a2197791d503f28b88e44fd02c407

--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div id="sidebar-scrollbox" class="sidebar-scrollbox">
-                <ol class="chapter"><li class="expanded affix "><a href="index.html">Introduction</a></li><li class="expanded affix "><a href="GettingStarted.html">Getting Started</a></li><li class="expanded affix "><a href="DevelopmentGuide.html">Development Guide</a></li><li class="expanded affix "><a href="CI.html">CI</a></li></ol>
+                <ol class="chapter"><li class="expanded affix "><a href="index.html">Introduction</a></li><li class="expanded affix "><a href="DevelopmentGuide.html">Development Guide</a></li><li class="expanded affix "><a href="CI.html">CI</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -192,7 +192,6 @@ Hello, world!
 <h3><a class="header" href="#javascript-bindings" id="javascript-bindings">JavaScript Bindings</a></h3>
 <p><a href="https://github.com/kateinoigakukun/JavaScriptKit">JavaScriptKit</a> is Swift framework to interact with JavaScript through WebAssembly.</p>
 <p>You can use any JavaScript API from Swift using this library.</p>
-<h1><a class="header" href="#getting-started" id="getting-started">Getting Started</a></h1>
 <h1><a class="header" href="#development-guide" id="development-guide">Development Guide</a></h1>
 <h2><a class="header" href="#forum-posts" id="forum-posts">Forum posts</a></h2>
 <ul>
