--- a/CI.html
+++ b/CI.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div id="sidebar-scrollbox" class="sidebar-scrollbox">
-                <ol class="chapter"><li class="expanded affix "><a href="index.html">Introduction</a></li><li class="expanded affix "><a href="GettingStarted.html">Getting Started</a></li><li class="expanded affix "><a href="DevelopmentGuide.html">Development Guide</a></li><li class="expanded affix "><a href="CI.html" class="active">CI</a></li></ol>
+                <ol class="chapter"><li class="expanded affix "><a href="index.html">Introduction</a></li><li class="expanded affix "><a href="DevelopmentGuide.html">Development Guide</a></li><li class="expanded affix "><a href="CI.html" class="active">CI</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
