--- a/print.html
+++ b/print.html
@@ -159,12 +159,12 @@
 <h3><a class="header" href="#installation" id="installation">Installation</a></h3>
 <p>You can install latest toolchain of SwiftWasm from <a href="https://github.com/swiftwasm/swift/releases">Release Page</a></p>
 <p>The toolchains can be installed via <a href="https://github.com/kylef/swiftenv"><code>swiftenv</code></a> like official nightly toolchain.</p>
-<p>e.g.</p>
+<p>Here's an example <code>swiftenv</code> invocation for installing the latest stable SwiftWasm toolchain on macOS Catalina:</p>
 <pre><code class="language-sh">
 $ swiftenv install \
-  https://github.com/swiftwasm/swift/releases/download/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a/swift-wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a-osx.tar.gz
+  https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3-SNAPSHOT-2020-08-15-a/swift-wasm-5.3-SNAPSHOT-2020-08-15-a-osx.tar.gz
 $ swift --version
-Swift version 5.3-dev (LLVM 7fc8796bc1, Swift 5be35e7aee)
+Swift version 5.3-dev (LLVM ba56ef042e, Swift 5855a96018)
 Target: x86_64-apple-darwin19.3.0
 </code></pre>
 <h3><a class="header" href="#hello-world" id="hello-world">Hello, World!</a></h3>
