deploy: 1ac2bfabd3355f0b67a03f2d9ca8dc34e2db604c

--- a/print.html
+++ b/print.html
@@ -162,7 +162,7 @@
 <p>Here's an example <code>swiftenv</code> invocation for installing the latest stable SwiftWasm toolchain on macOS Catalina:</p>
 <pre><code class="language-sh">
 $ swiftenv install \
-  https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3-SNAPSHOT-2020-08-15-a/swift-wasm-5.3-SNAPSHOT-2020-08-15-a-osx.tar.gz
+  https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3-SNAPSHOT-2020-09-28-a/swift-wasm-5.3-SNAPSHOT-2020-09-28-a-osx.tar.gz
 $ swift --version
 Swift version 5.3-dev (LLVM ba56ef042e, Swift 5855a96018)
 Target: x86_64-apple-darwin19.3.0
@@ -183,14 +183,14 @@ $ swiftc \
 So you need to use WASI supported runtime and when you run the binary on browser, you need WASI polyfill library like <a href="https://github.com/wasmerio/wasmer-js/tree/master/packages/wasi">@wasmer/wasi</a>.</p>
 <h3><a class="header" href="#swift-package-manager" id="swift-package-manager">Swift Package Manager</a></h3>
 <p>You can also use SwiftPM for managing packages in the same way as other platforms.</p>
-<pre><code class="language-sh">$ swiftenv local wasm-DEVELOPMENT-SNAPSHOT-2020-06-07-a
+<pre><code class="language-sh">$ swiftenv local swift-wasm-5.3-SNAPSHOT-2020-09-28-a
 $ swift package init --type executable
 $ swift build --triple wasm32-unknown-wasi
 $ wasmer ./.build/debug/hello-swiftwasm
 Hello, world!
 </code></pre>
 <h3><a class="header" href="#javascript-bindings" id="javascript-bindings">JavaScript Bindings</a></h3>
-<p><a href="https://github.com/kateinoigakukun/JavaScriptKit">JavaScriptKit</a> is Swift framework to interact with JavaScript through WebAssembly.</p>
+<p><a href="https://github.com/swiftwasm/JavaScriptKit">JavaScriptKit</a> is Swift framework to interact with JavaScript through WebAssembly.</p>
 <p>You can use any JavaScript API from Swift using this library.</p>
 <h1><a class="header" href="#development-guide" id="development-guide">Development Guide</a></h1>
 <h2><a class="header" href="#forum-posts" id="forum-posts">Forum posts</a></h2>
