deploy: d44fa7e1ea00d8d99ded715fb721bcd6763a0b2a

--- a/DevelopmentGuide.html
+++ b/DevelopmentGuide.html
@@ -93,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded affix "><a href="DevelopmentGuide.html" class="active">Development Guide</a></li><li class="chapter-item expanded affix "><a href="CI.html">CI</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded affix "><a href="DevelopmentGuide.html" class="active">Development Guide</a></li><li class="chapter-item expanded affix "><a href="CI.html">CI</a></li><li class="chapter-item expanded affix "><a href="getting-started/browser-app.html">Creating a browser app</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
