--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded affix "><a href="DevelopmentGuide.html">Development Guide</a></li><li class="chapter-item expanded affix "><a href="CI.html">CI</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded affix "><a href="DevelopmentGuide.html">Development Guide</a></li><li class="chapter-item expanded affix "><a href="CI.html">CI</a></li><li class="chapter-item expanded affix "><a href="getting-started/browser-app.html">Creating a browser app</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -269,6 +269,61 @@ $ ./utils/webassembly/build-linux.sh -R
 <li><a href="https://github.com/swiftwasm/swift/pull/160#issuecomment-586537014">https://github.com/swiftwasm/swift/pull/160#issuecomment-586537014</a></li>
 <li><a href="https://github.com/swiftwasm/swift/pull/232">https://github.com/swiftwasm/swift/pull/232</a></li>
 </ul>
+<h1><a class="header" href="#creating-a-browser-app" id="creating-a-browser-app">Creating a Browser App</a></h1>
+<p>Currently, <a href="https://tokamak.dev">the Tokamak UI framework</a> is one of the easiest ways to build a
+browser app with SwiftWasm. It tries to be compatible with <a href="https://developer.apple.com/xcode/swiftui/">the SwiftUI
+API</a> as much as possible, which potentially allows
+you to share most if not all code between SwiftWasm and other platforms.</p>
+<h2><a class="header" href="#requirements" id="requirements">Requirements</a></h2>
+<p>Tokamak relies on <a href="https://carton.dev">the <code>carton</code> development tool</a> for development and testing.
+While you can build Tokamak apps without <code>carton</code>, it requires a lot of manual steps that are
+automated with <code>carton</code>.</p>
+<h3><a class="header" href="#system-requirements" id="system-requirements">System Requirements</a></h3>
+<ul>
+<li>macOS 10.15 and Xcode 11.4 or later.</li>
+<li><a href="https://swift.org/download/">Swift 5.2 or later</a> and Ubuntu 18.04 for Linux users.</li>
+</ul>
+<h3><a class="header" href="#installation-1" id="installation-1">Installation</a></h3>
+<p>On macOS <code>carton</code> can be installed with <a href="https://brew.sh/">Homebrew</a>. Make sure you have Homebrew
+installed and then run:</p>
+<pre><code class="language-sh">brew install swiftwasm/tap/carton
+</code></pre>
+<p>You'll have to build <code>carton</code> from sources on Linux. Clone the repository and run
+<code>swift build -c release</code>, the <code>carton</code> binary will be located in the <code>.build/release</code>
+directory after that.
+Assuming you already have Homebrew installed, you can create a new Tokamak
+app by following these steps:</p>
+<ol>
+<li>Install <code>carton</code>:</li>
+</ol>
+<pre><code>brew install swiftwasm/tap/carton
+</code></pre>
+<p>If you had <code>carton</code> installed before this, make sure you have version 0.6.0 or greater:</p>
+<pre><code>carton --version
+</code></pre>
+<ol start="2">
+<li>Create a directory for your project and make it current:</li>
+</ol>
+<pre><code>mkdir TokamakApp &amp;&amp; cd TokamakApp
+</code></pre>
+<ol start="3">
+<li>Initialize the project from a template with <code>carton</code>:</li>
+</ol>
+<pre><code>carton init --template tokamak
+</code></pre>
+<ol start="4">
+<li>Build the project and start the development server, <code>carton dev</code> can be kept running
+during development:</li>
+</ol>
+<pre><code>carton dev
+</code></pre>
+<ol start="5">
+<li>Open <a href="http://127.0.0.1:8080/">http://127.0.0.1:8080/</a> in your browser to see the app
+running. You can edit the app source code in your favorite editor and save it, <code>carton</code>
+will immediately rebuild the app and reload all browser tabs that have the app open.</li>
+</ol>
+<p>You can also clone <a href="https://github.com/TokamakUI/Tokamak">the Tokamak repository</a> and run <code>carton dev</code> in its root directory. This will build the demo app that shows almost all of the currently
+implemented APIs.</p>
 
                     </main>
 
