--- a/getting-started/browser-app.html
+++ b/getting-started/browser-app.html
@@ -166,8 +166,8 @@ API</a> as much as possible, which potentially allows
 you to share most if not all code between SwiftWasm and other platforms.</p>
 <h2><a class="header" href="#requirements" id="requirements">Requirements</a></h2>
 <p>Tokamak relies on <a href="https://carton.dev">the <code>carton</code> development tool</a> for development and testing.
-While you can build Tokamak apps without <code>carton</code>, it requires a lot of manual steps that are
-automated with <code>carton</code>.</p>
+While you can build Tokamak apps without <code>carton</code>, that would require a lot of manual steps that are
+already automated with <code>carton</code>.</p>
 <h3><a class="header" href="#system-requirements" id="system-requirements">System Requirements</a></h3>
 <ul>
 <li>macOS 10.15 and Xcode 11.4 or later.</li>
