--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Use Swift Package</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.4.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.5.</strong> JavaScript Interoperation</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example Projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/continuous-integration.html"><strong aria-hidden="true">4.2.</strong> Continuous Integration</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.3.</strong> Tips</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Use Swift Package</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.4.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.5.</strong> JavaScript Interoperation</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example Projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/continuous-integration.html"><strong aria-hidden="true">4.2.</strong> Continuous Integration</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.3.</strong> Tips</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -432,21 +432,19 @@ main()
 <p>The main repository of this project. Forked from <a href="https://github.com/swiftwasm/swift">apple/swift</a>. We are tracking upstream changes using <a href="https://github.com/wei/pull">pull</a></p>
 <h4><a class="header" href="#branching-scheme" id="branching-scheme">Branching scheme</a></h4>
 <ul>
-<li><code>swiftwasm</code> is the main develop branch</li>
-<li><code>master</code> is a mirror of the <code>master</code> branch of the upstream <code>apple/master</code> repository. This branch is necessary to avoid <a href="https://github.com/swiftwasm/swift/pull/36">some issues</a></li>
+<li><code>swiftwasm</code> is the main development branch.</li>
+<li><code>main</code> is a mirror of the <code>main</code> branch of the upstream <code>apple/swift</code> repository. This branch is necessary to avoid <a href="https://github.com/swiftwasm/swift/pull/36">some issues</a>.</li>
 <li><code>swiftwasm-release/5.3</code> is the branch where 5.3 release of SwiftWasm is prepared.</li>
 <li><code>release/5.3</code> is a mirror of the upstream <code>release/5.3</code> branch.</li>
 </ul>
 <h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasmllvm-projecta" id="a-hrefhttpsgithubcomswiftwasmllvm-projectswiftwasmllvm-projecta"><a href="https://github.com/swiftwasm/llvm-project">swiftwasm/llvm-project</a></a></h3>
-<p>Forked from <a href="https://github.com/apple/llvm-project">apple/llvm-project</a>.</p>
-<p><code>swiftwasm</code> branch is based on <code>swift/master</code> branch of <code>apple/llvm-project</code>.</p>
-<p>Please see <a href="https://github.com/apple/llvm-project/blob/apple/master/apple-docs/AppleBranchingScheme.md">AppleBranchingScheme.md</a></p>
+<p>This repository is a fork of <a href="https://github.com/apple/llvm-project">apple/llvm-project</a>.</p>
+<p><code>swiftwasm</code> branch is based on <code>swift/main</code> branch of <code>apple/llvm-project</code>.</p>
+<p>Please see the <a href="https://github.com/apple/llvm-project/blob/apple/main/apple-docs/AppleBranchingScheme.md">AppleBranchingScheme.md</a>
+document in the upstream repository for more details.</p>
 <h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmicu4c-wasiswiftwasmicu4c-wasia" id="a-hrefhttpsgithubcomswiftwasmicu4c-wasiswiftwasmicu4c-wasia"><a href="https://github.com/swiftwasm/icu4c-wasi">swiftwasm/icu4c-wasi</a></a></h3>
-<p>Build script and patches for building ICU project for WebAssembly</p>
-<p>We are sending patches to upstream repository.</p>
-<ul>
-<li>https://github.com/unicode-org/icu/pull/990</li>
-</ul>
+<p>Build script and patches for building ICU project for WebAssembly. <a href="https://github.com/unicode-org/icu/pull/990">The required changes to build 
+it</a> were merged to the upstream repository.</p>
 <h3><a class="header" href="#a-hrefhttpsgithubcomswiftwasmwasi-sdkswiftwasmwasi-sdka-and-a-hrefhttpsgithubcomswiftwasmwasi-libcswiftwasmwasi-libca" id="a-hrefhttpsgithubcomswiftwasmwasi-sdkswiftwasmwasi-sdka-and-a-hrefhttpsgithubcomswiftwasmwasi-libcswiftwasmwasi-libca"><a href="https://github.com/swiftwasm/wasi-sdk">swiftwasm/wasi-sdk</a> and <a href="https://github.com/swiftwasm/wasi-libc">swiftwasm/wasi-libc</a></a></h3>
 <p>Forked from <a href="https://github.com/WebAssembly/wasi-sdk">WebAssembly/wasi-sdk</a> and <a href="https://github.com/WebAssembly/wasi-libc">WebAssembly/wasi-libc</a>.</p>
 <p>We fork them to build <code>wasi-sysroot</code> with pthread header. There aren't so many diff from upstream.</p>
@@ -466,7 +464,7 @@ $ ./utils/webassembly/macos/install-dependencies.sh
 $ ./utils/webassembly/linux/install-dependencies.sh
 </code></pre>
 <h2><a class="header" href="#3-build-using-custom-preset-options" id="3-build-using-custom-preset-options">3. Build using custom preset options</a></h2>
-<p>We support both Linux and macOS to build Swift. You need to select the preset name, <a href="contribution-guide/./cache.html"><code>sccache</code></a> path and LLVM tools directory.</p>
+<p>We support both Linux and macOS to build Swift. You need to select the preset name, <code>sccache</code> path and LLVM tools directory.</p>
 <pre><code class="language-sh"># On macOS
 $ ./utils/build-script \
         --preset=webassembly-macos-target \
@@ -506,7 +504,10 @@ $ ./utils/build-script \
 <li><a href="https://github.com/apple/swift/blob/master/docs/DevelopmentTips.md#use-sccache-to-cache-build-artifacts">Use sccache to cache build artifacts</a></li>
 </ul>
 <h2><a class="header" href="#debugging" id="debugging">Debugging</a></h2>
-<p>When you want to debug a WebAssembly binary, <a href="https://github.com/kateinoigakukun/wasminspect">wasminspect</a> is very helpful to investigate.</p>
+<p>When you want to debug a WebAssembly binary, <a href="https://github.com/kateinoigakukun/wasminspect">wasminspect</a> 
+can help in the investigation if the debugged binary does not rely on integration with JavaScript.
+We recommend splitting your packages into separate executable targets, most of which shouldn't 
+assume the availability of JavaScript to make debugging easier.</p>
 <p><img src="https://raw.githubusercontent.com/kateinoigakukun/wasminspect/master/assets/demo.gif" alt="demo" /></p>
 
                     </main>
