--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Use Swift Package</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.4.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.5.</strong> JavaScript Interoperation</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example Projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.2.</strong> Tips</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Use Swift Package Manager</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.4.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.5.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="getting-started/foundation.html"><strong aria-hidden="true">2.6.</strong> Swift Foundation</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.2.</strong> Tips</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -287,19 +287,59 @@ will immediately rebuild the app and reload all browser tabs that have the app o
 </ol>
 <p>You can also clone <a href="https://github.com/TokamakUI/Tokamak">the Tokamak repository</a> and run <code>carton dev</code> in its root directory. This will build the demo app that shows almost all of the currently
 implemented APIs.</p>
-<h1><a class="header" href="#javascript-interoperation" id="javascript-interoperation">JavaScript Interoperation</a></h1>
+<h1><a class="header" href="#javascript-interoperation" id="javascript-interoperation">JavaScript interoperation</a></h1>
 <p><a href="https://github.com/swiftwasm/JavaScriptKit">JavaScriptKit</a> is a Swift framework to interact with JavaScript through WebAssembly.</p>
-<p>You can use any JavaScript API from Swift using this library.</p>
+<p>You can use any JavaScript API from Swift with this library. Here's a quick example of JavaScriptKit
+usage in a browser app:</p>
 <pre><code class="language-swift">import JavaScriptKit
 
-let document = JSObject.global.document.object!
+let document = JSObject.global.document
 
-let divElement = document.createElement!(&quot;div&quot;).object!
+var divElement = document.createElement(&quot;div&quot;)
 divElement.innerText = &quot;Hello, world&quot;
-let body = document.body.object!
-_ = body.appendChild!(divElement)
+_ = document.body.appendChild(divElement)
 </code></pre>
-<p>JavaScriptKit consists of NPM runtime library package and SwiftPM package for Swift side API.</p>
+<p>You can also use JavaScriptKit in SwiftWasm apps integrated with Node.js, as there no assumptions
+that any browser API is present in the library.</p>
+<p>JavaScriptKit consists of a runtime library package <a href="https://www.npmjs.com/package/javascript-kit-swift">hosted on
+npm</a>, and a SwiftPM package for the API on the
+Swift side. To integrate the JavaScript runtime automatically into your app, we recommend following
+the corresponding <a href="getting-started/./browser-app.html">guide for browser apps in our book</a>.</p>
+<h1><a class="header" href="#use-swift-foundation-in-your-code" id="use-swift-foundation-in-your-code">Use Swift Foundation in your code</a></h1>
+<p><a href="https://swift.org/core-libraries/#foundation">The Foundation core library</a> is available in
+SwiftWasm, but in a limited capacity. The main reason is that <a href="https://swift.org/core-libraries/#libdispatch">the Dispatch core
+library</a> is unavailable due to <a href="https://github.com/swiftwasm/swift/issues/1887">the lack of 
+standardized multi-threading support</a> in WebAssembly
+and SwiftWasm itself. Many Foundation APIs rely on the presence of Dispatch under the hood,
+specifically file system access and threading helpers. A few other types are unavailable in browsers
+or aren't standardized in WASI hosts, such as support for sockets and low-level networking, or
+support for time zone files. and they had to be disabled. These types are therefore absent in
+SwiftWasm Foundation:</p>
+<ul>
+<li><code>FileManager</code></li>
+<li><code>Host</code></li>
+<li><code>Notification</code></li>
+<li><code>NotificationQueue</code></li>
+<li><code>NSKeyedArchiver</code></li>
+<li><code>NSKeyedArchiverHelpers</code></li>
+<li><code>NSKeyedCoderOldStyleArray</code></li>
+<li><code>NSKeyedUnarchiver</code></li>
+<li><code>NSNotification</code></li>
+<li><code>NSSpecialValue</code></li>
+<li><code>Port</code></li>
+<li><code>PortMessage</code></li>
+<li><code>Process</code></li>
+<li><code>ProcessInfo</code></li>
+<li><code>PropertyListEncoder</code></li>
+<li><code>RunLoop</code></li>
+<li><code>Stream</code></li>
+<li><code>Thread</code></li>
+<li><code>Timer</code></li>
+<li><code>UserDefaults</code></li>
+</ul>
+<p>Related functions and properties on other types are also absent or disabled. We would like to make
+them available in the future as soon as possible, and <a href="getting-started/../contribution-guide/index.html">we invite you to 
+contribute</a> and help us in achieving this goal!</p>
 <h1><a class="header" href="#examples" id="examples">Examples</a></h1>
 <p>This section shows you example usage of our toolchain.</p>
 <h1><a class="header" href="#importing-function-from-host-environment" id="importing-function-from-host-environment">Importing function from host environment</a></h1>
