deploy: a3f5f92282013df4ef96a1df4bedf1d8576ba063

--- a/print.html
+++ b/print.html
@@ -313,7 +313,7 @@ standardized multi-threading support</a> in WebAssembly
 and SwiftWasm itself. Many Foundation APIs rely on the presence of Dispatch under the hood,
 specifically file system access and threading helpers. A few other types are unavailable in browsers
 or aren't standardized in WASI hosts, such as support for sockets and low-level networking, or
-support for time zone files. and they had to be disabled. These types are therefore absent in
+support for time zone files, and they had to be disabled. These types are therefore absent in
 SwiftWasm Foundation:</p>
 <ul>
 <li><code>FileManager</code></li>
