--- a/getting-started/javascript-interop.html
+++ b/getting-started/javascript-interop.html
@@ -177,6 +177,7 @@ that any browser API is present in the library.</p>
 npm</a>, and a SwiftPM package for the API on the
 Swift side. To integrate the JavaScript runtime automatically into your app, we recommend following
 the corresponding <a href="./browser-app.html">guide for browser apps in our book</a>.</p>
+<p>You can get more detailed JavaScriptKit documentation <a href="https://swiftwasm.github.io/JavaScriptKit/">here</a>.</p>
 
                     </main>
 
