--- a/getting-started/setup.html
+++ b/getting-started/setup.html
@@ -160,15 +160,115 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#installation" id="installation">Installation</a></h1>
-<p>You can install latest toolchain of SwiftWasm from <a href="https://github.com/swiftwasm/swift/releases">Release Page</a></p>
-<p>The toolchains can be installed via <a href="https://github.com/kylef/swiftenv"><code>swiftenv</code></a> like <a href="https://swift.org/download/#snapshots">official nightly snapshot</a>.</p>
-<p>Here's an example <code>swiftenv</code> invocation for installing the latest stable SwiftWasm toolchain on macOS Catalina:</p>
-<pre><code class="language-sh">
-$ swiftenv install \
-  https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3-SNAPSHOT-2020-10-02-a/swift-wasm-5.3-SNAPSHOT-2020-10-02-a-osx.tar.gz
-$ swift --version
-Swift version 5.3-dev (LLVM ba56ef042e, Swift 5855a96018)
-Target: x86_64-apple-darwin19.3.0
+<p>To install Swift for WebAssembly toolchain, download one of the packages below and follow the instructions for your operating system.</p>
+<h2><a class="header" href="#releases" id="releases">Releases</a></h2>
+<h3><a class="header" href="#swiftwasm-53" id="swiftwasm-53">SwiftWasm 5.3</a></h3>
+<p>Tag: <a href="https://github.com/swiftwasm/swift/releases/tag/swift-wasm-5.3.0-RELEASE">swift-wasm-5.3.0-RELEASE</a></p>
+<table><thead><tr><th align="center">Download</th><th align="center">Docker Tag</th></tr></thead><tbody>
+<tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3.0-RELEASE/swift-wasm-5.3.0-RELEASE-macos_x86_64.pkg">macOS</a></td><td align="center">Unavailable</td></tr>
+<tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3.0-RELEASE/swift-wasm-5.3.0-RELEASE-ubuntu18.04_x86_64.tar.gz">Ubuntu 18.04</a></td><td align="center"><a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">5.3, 5.3-bionic, bionic, latest</a></td></tr>
+<tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3.0-RELEASE/swift-wasm-5.3.0-RELEASE-ubuntu20.04_x86_64.tar.gz">Ubuntu 20.04</a></td><td align="center"><a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">5.3-focal, focal</a></td></tr>
+</tbody></table>
+<p>You can download the latest development snapshot from <a href="https://github.com/swiftwasm/swift/releases">the Releases page</a></p>
+<h1><a class="header" href="#using-downloads" id="using-downloads">Using Downloads</a></h1>
+<h2><a class="header" href="#macos" id="macos">macOS</a></h2>
+<p>An Xcode toolchain (<code>.xctoolchain</code>) includes a copy of the compiler, linker, and other related tools needed to provide a cohesive development experience for working in a specific version of Swift.</p>
+<h3><a class="header" href="#requirements" id="requirements">Requirements</a></h3>
+<ul>
+<li>macOS 10.15 or later</li>
+</ul>
+<h3><a class="header" href="#installation-1" id="installation-1">Installation</a></h3>
+<ol>
+<li>Download the latest package release.</li>
+<li>Run the package installer, which will install an Xcode toolchain into <code>/Library/Developer/Toolchains/</code>.</li>
+<li>To use the Swift toolchain with command-line tools, use <code>xcrun --toolchain swiftwasm</code> or add the Swift toolchain to your path as follows:</li>
+</ol>
+<pre><code class="language-bash">export PATH=/Library/Developer/Toolchains/swift-latest.xctoolchain/usr/bin:&quot;${PATH}&quot;
+</code></pre>
+<ol start="4">
+<li>Run <code>swift --version</code>. If you installed the toolchain successfully, you can get the following message.</li>
+</ol>
+<pre><code class="language-bash">$ swift --version
+SwiftWasm Swift version 5.3 (swiftlang-5.3.0)
+Target: x86_64-apple-darwin19.6.0
+</code></pre>
+<h2><a class="header" href="#linux" id="linux">Linux</a></h2>
+<p>Packages for Linux are tar archives including a copy of the Swift compiler, linker, and related tools. You can install them anywhere as long as the extracted tools are in your PATH.</p>
+<h3><a class="header" href="#requirements-1" id="requirements-1">Requirements</a></h3>
+<ul>
+<li>Ubuntu 18.04 or 20.04 (64-bit)</li>
+</ul>
+<h3><a class="header" href="#installation-2" id="installation-2">Installation</a></h3>
+<ol>
+<li>Install required dependencies:</li>
+</ol>
+<pre><code class="language-bash"># Ubuntu 18.04
+apt-get install \
+          binutils \
+          git \
+          libc6-dev \
+          libcurl4 \
+          libedit2 \
+          libgcc-5-dev \
+          libpython2.7 \
+          libsqlite3-0 \
+          libstdc++-5-dev \
+          libxml2 \
+          pkg-config \
+          tzdata \
+          zlib1g-dev
+# Ubuntu 20.04
+apt-get install \
+          binutils \
+          git \
+          gnupg2 \
+          libc6-dev \
+          libcurl4 \
+          libedit2 \
+          libgcc-9-dev \
+          libpython2.7 \
+          libsqlite3-0 \
+          libstdc++-9-dev \
+          libxml2 \
+          libz3-dev \
+          pkg-config \
+          tzdata \
+          zlib1g-dev
+</code></pre>
+<ol start="2">
+<li>Download the latest binary release above.</li>
+</ol>
+<p>The <code>swift-wasm-&lt;VERSION&gt;-&lt;PLATFORM&gt;.tar.gz</code> file is the toolchain itself.</p>
+<ol start="3">
+<li>Extract the archive with the following command:</li>
+</ol>
+<pre><code class="language-bash">tar xzf swift-wasm-&lt;VERSION&gt;-&lt;PLATFORM&gt;.tar.gz
+</code></pre>
+<p>This creates a usr/ directory in the location of the archive.</p>
+<ol start="4">
+<li>Add the Swift toolchain to your path as follows:</li>
+</ol>
+<pre><code>export PATH=$(pwd)/usr/bin:&quot;${PATH}&quot;
+</code></pre>
+<p>You can now execute the swiftc command to build Swift projects.</p>
+<h2><a class="header" href="#docker" id="docker">Docker</a></h2>
+<p>SwiftWasm offical Docker images are hosted on <a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">GitHub Container Registry</a>.</p>
+<p>SwiftWasm Dockerfiles are located on <a href="https://github.com/swiftwasm/swiftwasm-docker">swiftwasm-docker</a> repository.</p>
+<h3><a class="header" href="#supported-platforms" id="supported-platforms">Supported Platforms</a></h3>
+<ul>
+<li>Ubuntu 18.04</li>
+<li>Ubuntu 20.04</li>
+</ul>
+<h3><a class="header" href="#using-docker-images" id="using-docker-images">Using Docker Images</a></h3>
+<ol>
+<li>Pull the Docker image from <a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">GitHub Container Registry</a>:</li>
+</ol>
+<pre><code class="language-bash">docker pull ghcr.io/swiftwasm/swift:latest
+</code></pre>
+<ol start="2">
+<li>Create a container using tag <code>latest</code> and attach it to the container:</li>
+</ol>
+<pre><code class="language-bash">docker run --rm -it ghcr.io/swiftwasm/swift:latest /bin/bash
 </code></pre>
 
                     </main>
