--- a/print.html
+++ b/print.html
@@ -179,15 +179,115 @@
 <li>How to interoperate with JavaScript</li>
 </ul>
 <h1><a class="header" href="#installation" id="installation">Installation</a></h1>
-<p>You can install latest toolchain of SwiftWasm from <a href="https://github.com/swiftwasm/swift/releases">Release Page</a></p>
-<p>The toolchains can be installed via <a href="https://github.com/kylef/swiftenv"><code>swiftenv</code></a> like <a href="https://swift.org/download/#snapshots">official nightly snapshot</a>.</p>
-<p>Here's an example <code>swiftenv</code> invocation for installing the latest stable SwiftWasm toolchain on macOS Catalina:</p>
-<pre><code class="language-sh">
-$ swiftenv install \
-  https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3-SNAPSHOT-2020-10-02-a/swift-wasm-5.3-SNAPSHOT-2020-10-02-a-osx.tar.gz
-$ swift --version
-Swift version 5.3-dev (LLVM ba56ef042e, Swift 5855a96018)
-Target: x86_64-apple-darwin19.3.0
+<p>To install Swift for WebAssembly toolchain, download one of the packages below and follow the instructions for your operating system.</p>
+<h2><a class="header" href="#releases" id="releases">Releases</a></h2>
+<h3><a class="header" href="#swiftwasm-53" id="swiftwasm-53">SwiftWasm 5.3</a></h3>
+<p>Tag: <a href="https://github.com/swiftwasm/swift/releases/tag/swift-wasm-5.3.0-RELEASE">swift-wasm-5.3.0-RELEASE</a></p>
+<table><thead><tr><th align="center">Download</th><th align="center">Docker Tag</th></tr></thead><tbody>
+<tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3.0-RELEASE/swift-wasm-5.3.0-RELEASE-macos_x86_64.pkg">macOS</a></td><td align="center">Unavailable</td></tr>
+<tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3.0-RELEASE/swift-wasm-5.3.0-RELEASE-ubuntu18.04_x86_64.tar.gz">Ubuntu 18.04</a></td><td align="center"><a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">5.3, 5.3-bionic, bionic, latest</a></td></tr>
+<tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.3.0-RELEASE/swift-wasm-5.3.0-RELEASE-ubuntu20.04_x86_64.tar.gz">Ubuntu 20.04</a></td><td align="center"><a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">5.3-focal, focal</a></td></tr>
+</tbody></table>
+<p>You can download the latest development snapshot from <a href="https://github.com/swiftwasm/swift/releases">the Releases page</a></p>
+<h1><a class="header" href="#using-downloads" id="using-downloads">Using Downloads</a></h1>
+<h2><a class="header" href="#macos" id="macos">macOS</a></h2>
+<p>An Xcode toolchain (<code>.xctoolchain</code>) includes a copy of the compiler, linker, and other related tools needed to provide a cohesive development experience for working in a specific version of Swift.</p>
+<h3><a class="header" href="#requirements" id="requirements">Requirements</a></h3>
+<ul>
+<li>macOS 10.15 or later</li>
+</ul>
+<h3><a class="header" href="#installation-1" id="installation-1">Installation</a></h3>
+<ol>
+<li>Download the latest package release.</li>
+<li>Run the package installer, which will install an Xcode toolchain into <code>/Library/Developer/Toolchains/</code>.</li>
+<li>To use the Swift toolchain with command-line tools, use <code>xcrun --toolchain swiftwasm</code> or add the Swift toolchain to your path as follows:</li>
+</ol>
+<pre><code class="language-bash">export PATH=/Library/Developer/Toolchains/swift-latest.xctoolchain/usr/bin:&quot;${PATH}&quot;
+</code></pre>
+<ol start="4">
+<li>Run <code>swift --version</code>. If you installed the toolchain successfully, you can get the following message.</li>
+</ol>
+<pre><code class="language-bash">$ swift --version
+SwiftWasm Swift version 5.3 (swiftlang-5.3.0)
+Target: x86_64-apple-darwin19.6.0
+</code></pre>
+<h2><a class="header" href="#linux" id="linux">Linux</a></h2>
+<p>Packages for Linux are tar archives including a copy of the Swift compiler, linker, and related tools. You can install them anywhere as long as the extracted tools are in your PATH.</p>
+<h3><a class="header" href="#requirements-1" id="requirements-1">Requirements</a></h3>
+<ul>
+<li>Ubuntu 18.04 or 20.04 (64-bit)</li>
+</ul>
+<h3><a class="header" href="#installation-2" id="installation-2">Installation</a></h3>
+<ol>
+<li>Install required dependencies:</li>
+</ol>
+<pre><code class="language-bash"># Ubuntu 18.04
+apt-get install \
+          binutils \
+          git \
+          libc6-dev \
+          libcurl4 \
+          libedit2 \
+          libgcc-5-dev \
+          libpython2.7 \
+          libsqlite3-0 \
+          libstdc++-5-dev \
+          libxml2 \
+          pkg-config \
+          tzdata \
+          zlib1g-dev
+# Ubuntu 20.04
+apt-get install \
+          binutils \
+          git \
+          gnupg2 \
+          libc6-dev \
+          libcurl4 \
+          libedit2 \
+          libgcc-9-dev \
+          libpython2.7 \
+          libsqlite3-0 \
+          libstdc++-9-dev \
+          libxml2 \
+          libz3-dev \
+          pkg-config \
+          tzdata \
+          zlib1g-dev
+</code></pre>
+<ol start="2">
+<li>Download the latest binary release above.</li>
+</ol>
+<p>The <code>swift-wasm-&lt;VERSION&gt;-&lt;PLATFORM&gt;.tar.gz</code> file is the toolchain itself.</p>
+<ol start="3">
+<li>Extract the archive with the following command:</li>
+</ol>
+<pre><code class="language-bash">tar xzf swift-wasm-&lt;VERSION&gt;-&lt;PLATFORM&gt;.tar.gz
+</code></pre>
+<p>This creates a usr/ directory in the location of the archive.</p>
+<ol start="4">
+<li>Add the Swift toolchain to your path as follows:</li>
+</ol>
+<pre><code>export PATH=$(pwd)/usr/bin:&quot;${PATH}&quot;
+</code></pre>
+<p>You can now execute the swiftc command to build Swift projects.</p>
+<h2><a class="header" href="#docker" id="docker">Docker</a></h2>
+<p>SwiftWasm offical Docker images are hosted on <a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">GitHub Container Registry</a>.</p>
+<p>SwiftWasm Dockerfiles are located on <a href="https://github.com/swiftwasm/swiftwasm-docker">swiftwasm-docker</a> repository.</p>
+<h3><a class="header" href="#supported-platforms" id="supported-platforms">Supported Platforms</a></h3>
+<ul>
+<li>Ubuntu 18.04</li>
+<li>Ubuntu 20.04</li>
+</ul>
+<h3><a class="header" href="#using-docker-images" id="using-docker-images">Using Docker Images</a></h3>
+<ol>
+<li>Pull the Docker image from <a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">GitHub Container Registry</a>:</li>
+</ol>
+<pre><code class="language-bash">docker pull ghcr.io/swiftwasm/swift:latest
+</code></pre>
+<ol start="2">
+<li>Create a container using tag <code>latest</code> and attach it to the container:</li>
+</ol>
+<pre><code class="language-bash">docker run --rm -it ghcr.io/swiftwasm/swift:latest /bin/bash
 </code></pre>
 <h1><a class="header" href="#hello-world" id="hello-world">Hello, World!</a></h1>
 <p>This section will show you how to compile a simple Swift code into WebAssembly and run the produced binary on WASI supported WebAssembly runtime.</p>
@@ -195,11 +295,7 @@ Target: x86_64-apple-darwin19.3.0
 <pre><code class="language-sh">$ echo 'print(&quot;Hello, world!&quot;)' &gt; hello.swift
 </code></pre>
 <h2><a class="header" href="#2-compile-swift-code-into-webassembly-with-wasi" id="2-compile-swift-code-into-webassembly-with-wasi">2. Compile Swift code into WebAssembly with WASI</a></h2>
-<pre><code>$ TOOLCHAIN_PATH=$(dirname $(swiftenv which swiftc))/../
-$ swiftc \
-    -target wasm32-unknown-wasi \
-    -sdk $TOOLCHAIN_PATH/share/wasi-sysroot \
-    hello.swift -o hello.wasm
+<pre><code>$ swiftc -target wasm32-unknown-wasi hello.swift -o hello.wasm
 </code></pre>
 <h2><a class="header" href="#3-run-the-produced-binary-on-webassembly-runtime" id="3-run-the-produced-binary-on-webassembly-runtime">3. Run the produced binary on WebAssembly runtime</a></h2>
 <p>You can the run the produced binary with <a href="https://wasmer.io/">wasmer</a> (or other WebAssembly runtime):</p>
@@ -237,7 +333,7 @@ Hello, world!
 browser app with SwiftWasm. It tries to be compatible with <a href="https://developer.apple.com/xcode/swiftui/">the SwiftUI
 API</a> as much as possible, which potentially allows
 you to share most if not all code between SwiftWasm and other platforms.</p>
-<h2><a class="header" href="#requirements" id="requirements">Requirements</a></h2>
+<h2><a class="header" href="#requirements-2" id="requirements-2">Requirements</a></h2>
 <p>Tokamak relies on <a href="https://carton.dev">the <code>carton</code> development tool</a> for development and testing.
 While you can build Tokamak apps without <code>carton</code>, that would require a lot of manual steps that are
 already automated with <code>carton</code>.</p>
@@ -246,7 +342,7 @@ already automated with <code>carton</code>.</p>
 <li>macOS 10.15 and Xcode 11.4 or later.</li>
 <li><a href="https://swift.org/download/">Swift 5.2 or later</a> and Ubuntu 18.04 for Linux users.</li>
 </ul>
-<h3><a class="header" href="#installation-1" id="installation-1">Installation</a></h3>
+<h3><a class="header" href="#installation-3" id="installation-3">Installation</a></h3>
 <p>On macOS <code>carton</code> can be installed with <a href="https://brew.sh/">Homebrew</a>. Make sure you have Homebrew
 installed and then run:</p>
 <pre><code class="language-sh">brew install swiftwasm/tap/carton
@@ -305,6 +401,7 @@ that any browser API is present in the library.</p>
 npm</a>, and a SwiftPM package for the API on the
 Swift side. To integrate the JavaScript runtime automatically into your app, we recommend following
 the corresponding <a href="getting-started/./browser-app.html">guide for browser apps in our book</a>.</p>
+<p>You can get more detailed JavaScriptKit documentation <a href="https://swiftwasm.github.io/JavaScriptKit/">here</a>.</p>
 <h1><a class="header" href="#use-swift-foundation-in-your-code" id="use-swift-foundation-in-your-code">Use Swift Foundation in your code</a></h1>
 <p><a href="https://swift.org/core-libraries/#foundation">The Foundation core library</a> is available in
 SwiftWasm, but in a limited capacity. The main reason is that <a href="https://swift.org/core-libraries/#libdispatch">the Dispatch core
@@ -399,15 +496,15 @@ these APIs from compilation.</p>
 for browser apps</a>, just run <code>carton test</code> in the
 root directory of your package. This will automatically build the test suite and run it with 
 <a href="https://wasmer.io/">Wasmer</a> for you.</p>
-<h2><a class="header" href="#building-and-running-the-test-suite-with-swiftenv" id="building-and-running-the-test-suite-with-swiftenv">Building and running the test suite with <code>swiftenv</code></a></h2>
-<p>If you manage your SwiftWasm toolchain with <code>swiftenv</code> (as shown in <a href="getting-started/./setup.html">the &quot;Setup&quot; section</a>),
+<h2><a class="header" href="#building-and-running-the-test-suite-with-swiftpm" id="building-and-running-the-test-suite-with-swiftpm">Building and running the test suite with <code>SwiftPM</code></a></h2>
+<p>If you manage your SwiftWasm toolchain without <code>carton</code> (as shown in <a href="getting-started/./setup.html">the &quot;Setup&quot; section</a>),
 you can build your test suite by running this command in your terminal:</p>
 <pre><code class="language-sh">$ swift build --build-tests --triple wasm32-unknown-wasi
 </code></pre>
 <p>If you're used to running <code>swift test</code> to run test suites for other Swift platforms, we have to
 warn you that this won't work. <code>swift test</code> doesn't know what WebAssembly environment you'd like to 
 use to run your tests. Because of this building tests and running them are two separate steps when
-using <code>swiftenv</code>. After your tests are built, you can use a WASI-compatible host such as
+using <code>SwiftPM</code>. After your tests are built, you can use a WASI-compatible host such as
 <a href="https://wasmer.io/">Wasmer</a> to run the test bundle:</p>
 <pre><code class="language-sh">$ wasmer .build/debug/HelloSwiftWasmPackageTests.xctest
 </code></pre>
@@ -510,10 +607,8 @@ func add(_ lhs: Int, _ rhs: Int) -&gt; Int {
 }
 </code></pre>
 <p>You need to compile the Swift code with linker option <code>--export</code>.</p>
-<pre><code class="language-bash">$ TOOLCHAIN_PATH=$(dirname $(swiftenv which swiftc))/../
-$ swiftc \
+<pre><code class="language-bash">$ swiftc \
     -target wasm32-unknown-wasi \
-    -sdk $TOOLCHAIN_PATH/share/wasi-sysroot \
     lib.swift -o lib.wasm \
     -Xlinker --export=add
 </code></pre>
