deploy: fdd4372b56f597edb251cffc6d337a30a3306349

--- a/getting-started/swift-package.html
+++ b/getting-started/swift-package.html
@@ -181,7 +181,7 @@ Creating Tests/helloTests/XCTestManifests.swift
 </code></pre>
 <h2><a class="header" href="#3-run-the-produced-binary" id="3-run-the-produced-binary">3. Run the produced binary</a></h2>
 <p>Just as in the <a href="./hello-world.html">previous section</a>, you can run the produced binary with the <code>wasmer</code> WebAssembly runtime.</p>
-<pre><code class="language-sh">$ wasmer ./.build/debug/hello-swiftwasm
+<pre><code class="language-sh">$ wasmer ./.build/debug/hello-swiftwasm.wasm
 Hello, world!
 </code></pre>
 
