--- a/getting-started/setup.html
+++ b/getting-started/setup.html
@@ -179,7 +179,7 @@
 </ul>
 <h3><a class="header" href="#installation-1" id="installation-1">Installation</a></h3>
 <ol>
-<li>Download the latest package release.</li>
+<li><a href="https://book.swiftwasm.org/getting-started/setup.html#swiftwasm-53">Download the latest package release.</a></li>
 <li>Run the package installer, which will install an Xcode toolchain into <code>/Library/Developer/Toolchains/</code>.</li>
 <li>To use the Swift toolchain with command-line tools, use <code>xcrun --toolchain swiftwasm</code> or add the Swift toolchain to your path as follows:</li>
 </ol>
