deploy: 9f4b2898e191d654e8401b08e28326018bf4fb24

--- a/print.html
+++ b/print.html
@@ -416,6 +416,7 @@ or aren't standardized in WASI hosts, such as support for sockets and low-level 
 support for time zone files, and they had to be disabled. These types are therefore absent in
 SwiftWasm Foundation:</p>
 <ul>
+<li><code>FoundationNetworking</code> types, such as <code>URLSession</code> and related APIs</li>
 <li><code>FileManager</code></li>
 <li><code>Host</code></li>
 <li><code>Notification</code></li>
